--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.1",
     "express": "^4.14.1",
     "mongoose": "~3.6.13",
+    "mongodb": "^2.2.21",
     "body-parser": "~1.0.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
